# webscraping-mit-python

./: .buildinfo  .gitignore  README.html  README.md  _config.yml  _toc.yml  genindex.html  intro.html  intro.md  objects.inv  pyproject.toml  references.bib  requirements.txt  robots.txt  search.html  searchindex.js  utils.py
.github/workflows/: deploy-book.yml
_sources/: README.md  intro.md
_sources/chapters/02/: 02_intro.md
_sources/chapters/04/: 04_intro.md
_sources/chapters/05/: 05_intro.md
_sources/chapters/06/: 06_intro.md
_sources/chapters/07/: 07_intro.md
_sources/chapters/08/: 08_intro.md
chapters/01/: 01_intro.html  01_intro.md
chapters/01/subchapters/: 01_was_ist_webscraping.html  02_warum_webscraping_lernen.html  02_warum_webscraping_lernen.md  03_semesterplan.html  03_semesterplan.ipynb  04_lernziele.html  04_lernziele.md  05_organisation.html  05_organisation.md
chapters/02/: 02_intro.html
chapters/02/subchapters/: 01_hilfe.html  01_hilfe.md  01_jupyterlite.html  01_jupyterlite.md  01_style.html  01_style.ipynb  02_grundbegriffe.html  02_grundbegriffe.md  03_datentypen.html  03_datentypen.ipynb  04_variablen.html  04_variablen.ipynb
chapters/03/: 03_intro.html  03_intro.md
chapters/03/subchapters/: 01_datentypen.html  01_datentypen.ipynb  (+2 more)
chapters/04/: 04_intro.html
chapters/05/: 05_intro.html
chapters/06/: 06_intro.html
chapters/07/: 07_intro.html
chapters/08/: 08_intro.html
chapters/09/: 09_intro.html  09_intro.md
chapters/10/: 10_intro.html  10_intro.md
chapters/11/: 11_intro.html  11_intro.md
(+170 files in other folders)
